--- a/jmtesting/design-canada/closed-programs.html
+++ b/jmtesting/design-canada/closed-programs.html
@@ -160,7 +160,7 @@
                     
 					<h3>Update the page title and metadata</h3>
 					<ul>
-						<li><b>Add "Closed:"</b> to the beginning of the visible page title (H1) and the metadata <title> tag
+						<li><b>Add "Closed:"</b> to the beginning of the visible page title (H1) and the metadata &lt;title&gt; tag
 							<li><b>Placing the text at the front</b> ensures it appears in search results and isn't cut off in longer titles
 							</li>
 						</li>
@@ -170,17 +170,17 @@
 
 					<h4>Metadata title</h4>
 					<pre><code>
-						&lt;title&gt;Closed: Maple Syrup Stabilization Grant&lt;/title&gt;
+  &lt;title&gt;Closed: Maple Syrup Stabilization Grant&lt;/title&gt;
 					</code></pre>
 
 					<h4>Metadata description</h4>
 					<pre><code>
-						 &lt;meta name="description" content="This program is closed. It stopped accepting applications on June 3, 2025."/&gt;
+  &lt;meta name="description" content="This program is closed. It stopped accepting applications on June 3, 2025."/&gt;
 					</code></pre>
 
 					<p>For more information, refer to the guidance for:</p>
 						<ul>
-							<li><a href="https://design.canada.ca/specifications/information-findability/metadata.html#m2">writing effective content for <title> and <h1> elements</a></li>
+							<li><a href="https://design.canada.ca/specifications/information-findability/metadata.html#m2">writing effective content for &lt;title/&gt; and &lt;h1/&gt; elements</a></li>
 							<li><a href="https://design.canada.ca/specifications/information-findability/metadata.html#m3">writing effective metadata descriptions</a></li>
 						</ul>
 
