--- a/jmtesting/design-canada/closed-programs.html
+++ b/jmtesting/design-canada/closed-programs.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="https://design.canada.ca/css/custom.css" />
         <noscript><link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/css/noscript.min.css" /></noscript>
     </head>
-    <body vocab="http://schema.org/" typeof="WebPage">
+    <body class="cnt-wdth-lmtd" vocab="http://schema.org/" typeof="WebPage">
         <nav>
             <ul id="wb-tphp">
                 <li class="wb-slc"><a class="wb-sl" href="#wb-cont">Skip to main content</a></li>
