--- a/jmtesting/design-canada/closed-programs.html
+++ b/jmtesting/design-canada/closed-programs.html
@@ -193,8 +193,7 @@
 					<h3>Update the page title and metadata</h3>
 					<ul>
 						<li><b>Add "Closed:"</b> to the beginning of the visible page title (H1) and the metadata &lt;title&gt; tag
-							<li><b>Placing the text at the front</b> ensures it appears in search results and isn't cut off in longer titles
-							</li>
+							<li><b>Placing the text at the front</b> ensures it appears in search results and isn't cut off in longer titles</li>
 						</li>
 						<li><b>Update the metadata description</b> to clearly state that the program or service is now closed</li>
 					</ul>
