--- a/jmtesting/all-services/list-numbered.html
+++ b/jmtesting/all-services/list-numbered.html
@@ -268,45 +268,12 @@
 
     <div class="container">
   <h1 id="wb-cont">Government of Canada services</h1>
-  <a href="#all-topics" class="wb-sl">Skip to Access services by topic</a>
 </div>
   
-             <section class="bg-light pb-3 mt-3">
-                <div class="container">
-                <h2 class="h3 mb-4">Top searches</h2>
-                <ul class="list-unstyled colcount-md-3 compact bold-content lst-spcd-2 fnt-hdng">
-                  <li><a href="/en/services/benefits/dental/dental-care-plan.html">Canadian Dental Care Plan</a></li>
-                  <li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Passports</a></li>
-                  <li><a href="/en/services/benefits/ei.html">Employment Insurance and leave</a></li>
-                  <li><a href="/en/employment-social-development/services/sin.html">Social insurance number (<abbr>SIN</abbr>)</a></li>
-                  <li><a href="/en/services/benefits/publicpensions.html">Public pensions (<abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Old Age Security Pension">OAS</abbr>, <abbr title="Guaranteed Income Supplement">GIS</abbr>)</a></li>
-                  <li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
-                  <li><a href="/en/immigration-refugees-citizenship/services/visit-canada/eta.html">Electronic travel authorization (<abbr>eTA</abbr>)</a></li>
-                  <li><a href="/en/employment-social-development/programs/ei/ei-list/ei-roe.html">Record of employment (<abbr>ROE</abbr>)</a></li>   
-					<li><span>&nbsp;</span></li> 
-				  	
-                </ul>
-              </div>
-              </section>
 
-
-            <section class="pb-3">
-              <div class="container">
-                <h2 class="h3 mb-4">Most requested services</h2>
-                <ul class="list-unstyled colcount-md-3 compact bold-content lst-spcd-2 fnt-hdng">
-                  <li><a href="/en/government/sign-in-online-account.html">Sign in to an account</a></li>
-                  <li><a href="/en/government/change-address.html">Change your address</a></li>
-                  <li><a href="/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Set up or change your direct deposit</a></li>
-                  <li><a href="/en/government/grants-funding.html">Find grants and funding</a></li>
-                  <li><a href="/en/services/jobs/opportunities.html">Find a job</a></li>
-                  <li><a href="/en/revenue-agency/services/e-services/digital-services-businesses/payroll-deductions-online-calculator.html">Payroll Deductions Online Calculator</a></li>
-                </ul>
-              </div>
-              </section>
-
-<section class="bg-light pb-3">
+<section class="bg-light pb-3 mrgn-tp-lg">
 <div class="container">
-                  <h2 class="h3 mb-4">top tasks</h2>
+                  <h2 class="h3 mb-4">Top tasks</h2>
                   <ul class="list-unstyled colcount-md-3 compact bold-content lst-spcd-2 fnt-hdng">
                    <ul>
         <li><a href="">Apply for a work permit</a></li> <!-- #1-->
@@ -374,41 +341,6 @@
 
 </div>
 
-
-
-</div>
-<div class="mwsgeneric-base-html parbase section">
-
-
-
-    <div class="container">
-	
-<div class="gc-srvinfo">
-
-<h2>Focus on</h2>
-
-<div class="wb-eqht row">
-
-<div class="col-md-6 col-lg-4">
-<h3 class="h5"><a href="/en/services/indigenous-peoples.html">Indigenous Peoples</a></h3>
-<p>Programs and services for First Nations, Inuit and Métis</p>
-</div>
-
-<div class="col-md-6 col-lg-4">
-<h3 class="h5"><a href="/en/services/veterans-military.html">Veterans and military</a></h3>
-<p>Services for current and former military, <abbr title="Royal Canadian Mounted Police">RCMP</abbr> and their families</p>
-</div>
-
-<div class="col-md-6 col-lg-4">
-<h3 class="h5"><a href="/en/services/youth.html">Youth</a></h3>
-<p>Programs and services for teenagers and young adults</p>
-</div>
-
-</div>
-
-</div>
-
-</div>
 
 
 </div>
