--- a/jmtesting/all-services/list-numbered.html
+++ b/jmtesting/all-services/list-numbered.html
@@ -274,8 +274,7 @@
 <section class="bg-light pb-3 mrgn-tp-lg">
 <div class="container">
                   <h2 class="h3 mb-4">Top tasks</h2>
-                  <ul class="list-unstyled colcount-md-3 compact bold-content lst-spcd-2 fnt-hdng">
-                   <ul>
+                  <ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng">
         <li><a href="">Apply for a work permit</a></li> <!-- #1-->
         <li><a href="">Check your application status</a></li> <!-- #2-->
         <li><a href="">Access My Account</a></li> <!-- #3-->
