--- a/jmtesting/all-services/top-task-expand-collapse-xl.html
+++ b/jmtesting/all-services/top-task-expand-collapse-xl.html
@@ -376,7 +376,7 @@
 						<li><a href="">Make a payment to the Canada Revenue Agency</a></li> <!-- #29 repeated -->
 						<li><a href="">Calculate payroll deductions</a></li> <!-- #38-->
 						<li><a href="">File an employer information return (T4 Summary)</a></li> <!-- #46-->
-						<li><a href="">Access My Business Account [leave out? sign in]</a></li> <!-- #49 -->
+						<li><a href="">Access My Business Account</a></li> <!-- #49 -->
 					</ul>
 					</details>
 					
