--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -320,11 +320,20 @@
               </div>
               </section> --> 
 
+			  <div class="container">
+
+<div class="btn-group mrgn-bttm-sm mrgn-tp-lg">
+  <button type="button" class="btn btn-default wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#expand-collapse&quot;, &quot;type&quot;: &quot;on&quot;}">Expand
+  All</button>
+  <button type="button" class="btn btn-default wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#expand-collapse&quot;, &quot;type&quot;: &quot;off&quot;}">Collapse
+  All</button>
+</div>
+</div>
 			<div class="container">
-				<h2>Section heading</h2>
+				<h2 class="h3">Section heading</h2>
 			</div>
 
-			<section class="mrgn-tp-md">
+			<section class="mrgn-tp-sm">
 				<div class="container">
 					<details><summary><h2 id="1" class="h5 mb-4">Come to Canada</h2></summary>
 					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
@@ -374,7 +383,7 @@
 						<li><a href="">Make a payment to the Canada Revenue Agency</a></li> <!-- #29 repeated -->
 						<li><a href="">Calculate payroll deductions</a></li> <!-- #38-->
 						<li><a href="">File an employer information return (T4 Summary)</a></li> <!-- #46-->
-						<li><a href="">Access My Business Account [leave out? sign in]</a></li> <!-- #49 -->
+						<li><a href="">Access My Business Account</a></li> <!-- #49 -->
 					</ul>
 					</details>
 					
