--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -330,7 +330,7 @@
 </div>
 </div>
 			<div class="container">
-				<h2 class="h3">Section heading</h2>
+				<h2 class="h3">By category</h2>
 			</div>
 
 			<section class="mrgn-tp-sm">
