--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -279,47 +279,10 @@
                   <li><a href="/en/government/grants-funding.html">Find grants and funding</a></li>
                   <li><a href="/en/services/jobs/opportunities.html">Find a job</a></li>
 				  <li><a href="/en/employment-social-development/services/sin.html">Social insurance number (<abbr>SIN</abbr>)</a></li>
-			 	  <!-- <li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li> -->
-                  <!-- <li><a href="/en/revenue-agency/services/e-services/digital-services-businesses/payroll-deductions-online-calculator.html">Payroll Deductions Online Calculator</a> part of content below</li> -->
+				  <li><a href="">Student loans</a></li> <!-- from Chelsey Airtable -->
 				</ul>
               </div>
         </section>
-
-<!-- <div class="container">
-
-  <h2 class="h3">On this page</h2>
-  <ul>
-	<li><a href="#1">Come to Canada</a></li>
-	<li><a href="#2">Passports and Citizenship</a></li>
-	<li><a href="#3">Personal taxes</a></li>
-	<li><a href="#4">Business taxes</a></li>
-	<li><a href="#5">Employment insurance</a></li>
-	<li><a href="#6">Benefits and public pensions (CPP, OAS, GIC)</a></li>
-	<li><a href="#7">Information and advisories</a></li>
-	<li><a href="#7">Jobs</a></li> leave out, #21 and 27 in MR items
-  </ul>
-</div> -->
-
-         
-          <!--  All top search is part of the top task content, or can go there  <section class="bg-light pb-3 mt-3">
-                <div class="container">
-                <h2 class="h3 mb-4">Top searches</h2><mark>what kind of clicks are we seeing here?</mark>
-                <ul class="list-unstyled colcount-md-3 compact bold-content lst-spcd-2 fnt-hdng">
-                   <li><a href="/en/services/benefits/dental/dental-care-plan.html">Canadian Dental Care Plan</a></li> part of content below  
-                   <li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Passports</a></li> part of content below ? maybe confusing for users under heading
-                  <li><a href="/en/services/benefits/ei.html">Employment Insurance and leave part of content below </a></li> 
-                  <li><a href="/en/services/benefits/publicpensions.html">Public pensions (<abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Old Age Security Pension">OAS</abbr>, <abbr title="Guaranteed Income Supplement">GIS</abbr>)</a></li>
-                  <li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
-                  <li><a href="/en/immigration-refugees-citizenship/services/visit-canada/eta.html">Electronic travel authorization (<abbr>eTA</abbr>)</a></li> part of content below 
-                  <li><a href="/en/employment-social-development/programs/ei/ei-list/ei-roe.html">Record of employment (<abbr>ROE</abbr>)</a></li>   part of content below
-
-
-		
-				  	
-                </ul>
-              </div>
-              </section> --> 
-
 			  <div class="container">
 
 <div class="btn-group mrgn-bttm-sm mrgn-tp-lg">
@@ -344,7 +307,7 @@
 						<li><a href="">Apply for an  Electronic Travel Authorization (eTA)</a></li>  <!-- #9-->
 						<li><a href="">Apply for a study permit</a></li>  <!-- #15-->
 						<li><a href="">Check processing times</a></li> <!-- #17 -->
-						<!-- <li><a href="">IRCC accounts - sign in and register</a></li> #18 part of accounts / global sign in -->
+						<li><a href="">IRCC accounts - sign in and register</a></li> #18 part of accounts / global sign in
 						<li><a href="">Contact Immigration, Refugees and Citizenship Canada</a></li> <!-- #23-->
 						<li><a href="">Immigrate as a provincial nominee</a></li> <!-- #30 -->
 						<li><a href="">Sponsor your family members to immigrate to Canada</a></li> <!-- #31-->
@@ -407,6 +370,7 @@
 						<li><a href="">Old Age Security (OAS) - View payment amounts</a></li> <!-- #37-->
 						<li><a href="">Pension payment dates</a></li> <!-- #39-->
 						<li><a href="">Canada Pension Plan (CPP) - Check payment information</a></li> <!-- #47-->
+						<li><a href="">Canada Workers Benefit</a></li> <!-- from Chelsey Airtable -->
 						<li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
 						<li><a href="">Public pensions (<abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Old Age Security Pension">OAS</abbr>, <abbr title="Guaranteed Income Supplement">GIS</abbr>)</a></li>
 					</ul>
