--- a/jmtesting/all-services/top-task-expand-collapse-xl.html
+++ b/jmtesting/all-services/top-task-expand-collapse-xl.html
@@ -279,6 +279,8 @@
                   <li><a href="/en/government/grants-funding.html">Find grants and funding</a></li>
                   <li><a href="/en/services/jobs/opportunities.html">Find a job</a></li>
 				  <li><a href="/en/employment-social-development/services/sin.html">Social insurance number (<abbr>SIN</abbr>)</a></li>
+				<li><a href="">Student loans</a></li> <!-- from Chelsey Airtable -->
+
 			 	  <!-- <li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li> -->
                   <!-- <li><a href="/en/revenue-agency/services/e-services/digital-services-businesses/payroll-deductions-online-calculator.html">Payroll Deductions Online Calculator</a> part of content below</li> -->
 				</ul>
@@ -289,20 +291,21 @@
 
   <h2 class="h3">On this page</h2>
   <ul>
-	<li><a href="#1">Visit Canada</a></li>
-	<li><a href="#1b">Live, work or study in Canada</a></li>
+	<li><a href="#1">Come to Canada</a></li>
 	<li><a href="#2">Passports and Citizenship</a></li>
 	<li><a href="#3">Personal taxes</a></li>
 	<li><a href="#4">Business taxes</a></li>
 	<li><a href="#5">Employment insurance and leave</a></li>
-	<li><a href="#6">Benefits and public pensions (CPP, OAS, GIC)</a></li>
+	<li><a href="#6">Benefits, dental care and support</a></li>
+	<li><a href="#7">Public pensions (CPP, OAS, GIC)</a></li>
 	<li><a href="#">[Placeholder]</a></li>
 	<li><a href="#">[Placeholder]</a></li>
 	<li><a href="#">[Placeholder]</a></li>
 	<li><a href="#">[Placeholder]</a></li>
 	<li><a href="#">[Placeholder]</a></li>
-	<li><a href="#">[Placeholder]</a></li>
-	<li><a href="#7">Information and advisories</a></li>
+	<li><a href="#8">Information and advisories</a></li>
+	<li><a href="#9">Local government (birth certificates, marriage licenses, driver's licenses etc.)</a></li>
+
 </div>
 
          
@@ -322,28 +325,22 @@
 
 			<section class="mrgn-tp-lg">
 				<div class="container">
-					<details><summary><h2 class="h5 mb-4">Visit Canada</h2></summary>
-					<ul id="1" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
-						<li><a href="">Apply for a visitor visa</a></li>  <!-- #5-->
-						<li><a href="">Apply for an  Electronic Travel Authorization (eTA)</a></li>  <!-- #9-->
-						<li><a href="">Check processing times</a></li> <!-- #17 -->
-						<li><a href="">IRCC accounts - sign in and register</a></li> <!-- #18 -->
-					</ul>
-					</details>
-					<details><summary><h2 class="h5 mb-4">Live, work and study in Canada</h2></summary>
-					<ul id="1b" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
+										<details><summary><h2 id="1" class="h5 mb-4">Come to Canada</h2></summary>
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 						<li><a href="">Apply for a work permit</a></li><!-- #1-->
 						<li><a href="">Check your application status</a></li>  <!-- #2 -->
+						<li><a href="">Apply for a visitor visa</a></li>  <!-- #5-->
 						<li><a href="">Immigrate through Express Entry</a></li>  <!-- #7-->
+						<li><a href="">Apply for an  Electronic Travel Authorization (eTA)</a></li>  <!-- #9-->
 						<li><a href="">Apply for a study permit</a></li>  <!-- #15-->
 						<li><a href="">Check processing times</a></li> <!-- #17 -->
-						<li><a href="">IRCC accounts - sign in and register</a></li> <!-- #18 -->
+						<li><a href="">IRCC accounts - sign in and register</a></li> #18 part of accounts / global sign in
 						<li><a href="">Contact Immigration, Refugees and Citizenship Canada</a></li> <!-- #23-->
 						<li><a href="">Immigrate as a provincial nominee</a></li> <!-- #30 -->
 						<li><a href="">Sponsor your family members to immigrate to Canada</a></li> <!-- #31-->
 						<li><a href="">Get, renew or replace a permanent resident card</a></li> <!-- #42-->
 					</ul>
-					</details>    
+					</details>   
 					<details><summary><h2 class="h5 mb-4">Passports and Citizenship</h2></summary>
 					<ul id="2" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 							<li><a href="">Renew a Canadian passport</a></li>  <!-- #11-->
@@ -391,11 +388,18 @@
 
 					</ul>
 					</details>
-						<details><summary><h2 class="h5 mb-4">Benefits and public pensions (CPP, OAS, GIC)</h2></summary>
+						<details><summary><h2 class="h5 mb-4">Benefits, dental care and support</h2></summary>
 					<ul id="6" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 						<li><a href="">Benefits for people with disabilities</a></li> <!-- #24-->
 						<li><a href="">Canadian Dental Care Plan</a></li> <!-- #26-->
 						<li><a href="">Canada Child Benefit (CCB)</a></li> <!-- #33-->
+						<li><a href="">Canada Workers Benefit</a></li> <!-- from Chelsey Airtable -->
+						<li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
+					</ul>
+					</details>
+						<details><summary><h2 class="h5 mb-4">Public pensions (CPP, OAS, GIC)</h2></summary>
+					<ul id="7" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
+						<li><a href="">Canadian Dental Care Plan</a></li> <!-- #26-->
 						<li><a href="">Old Age Security (OAS) - View payment amounts</a></li> <!-- #37-->
 						<li><a href="">Pension payment dates</a></li> <!-- #39-->
 						<li><a href="">Canada Pension Plan (CPP) - Check payment information</a></li> <!-- #47-->
@@ -452,10 +456,28 @@
 						</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">Information and advisories</h2></summary>
-					<ul id="7" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
+					<ul id="8" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 						<li><a href="">Weather (current conditions, forecasts, radar, alerts, historical)</a></li> <!-- #32-->
 						<li><a href="">Find a government policy, directive, standard or guideline</a></li> <!-- #43-->
 						<li><a href="">Travel advice and advisories</a></li> <!-- #48-->
+					</ul>
+					</details>
+					<details><summary><h2 class="h5 mb-4">Local government (birth certificates, marriage licenses, driver's licenses etc.)</h2></summary>
+						<p>Many services are the responsibility of your local government. Please visit your local website. <mark>we can provide additional examples in bullets if needed</mark></p>
+					<ul id="9" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
+						<li><a href="">Alberta</a></li>
+						<li><a href="">British Columbia</a></li> 
+						<li><a href="">Manitoba</a></li>
+						<li><a href="">New Brunswick</a></li> 
+						<li><a href="">Newfoundland and Labrador</a></li> 
+						<li><a href="">Nova Scotia</a></li> 
+						<li><a href="">Ontario</a></li> 
+						<li><a href="">Prince Edward Island</a></li> 
+						<li><a href="">Quebec</a></li> 
+						<li><a href="">Saskatchewan</a></li> 
+						<li><a href="">Northwest Territories</a></li> 
+						<li><a href="">Nunavut</a></li> 
+						<li><a href="">Yukon</a></li> 
 					</ul>
 					</details>
 				</div>
