--- a/jmtesting/all-services/top-task-expand-collapse-xl.html
+++ b/jmtesting/all-services/top-task-expand-collapse-xl.html
@@ -463,8 +463,8 @@
 					</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">Local government (birth certificates, marriage licenses, driver's licenses etc.)</h2></summary>
-						<p>Many services are the responsibility of your local government. Please visit your local website. <mark>we can provide additional examples in bullets if needed</mark></p>
-					<ul id="9" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
+						<p id="9">Many services are the responsibility of your local government. Please visit your local website. <mark>we can provide additional examples in bullets if needed</mark></p>
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 						<li><a href="">Alberta</a></li>
 						<li><a href="">British Columbia</a></li> 
 						<li><a href="">Manitoba</a></li>
