--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -363,15 +363,20 @@
 					</ul>
 					</details>
 					
-					<details><summary><h2 id="6" class="h5 mb-4">Benefits and public pensions (CPP, OAS, GIC)</h2></summary>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
+						<details><summary><h2 class="h5 mb-4">Benefits, dental care and support</h2></summary>
+					<ul id="6" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 						<li><a href="">Benefits for people with disabilities</a></li> <!-- #24-->
 						<li><a href="">Canadian Dental Care Plan</a></li> <!-- #26-->
 						<li><a href="">Canada Child Benefit (CCB)</a></li> <!-- #33-->
+						<li><a href="">Canada Workers Benefit</a></li> <!-- from Chelsey Airtable -->
+					</ul>
+					</details>
+						<details><summary><h2 class="h5 mb-4">Public pensions (CPP, OAS, GIC)</h2></summary>
+					<ul id="7" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
+						<li><a href="">Canadian Dental Care Plan</a></li> <!-- #26-->
 						<li><a href="">Old Age Security (OAS) - View payment amounts</a></li> <!-- #37-->
 						<li><a href="">Pension payment dates</a></li> <!-- #39-->
 						<li><a href="">Canada Pension Plan (CPP) - Check payment information</a></li> <!-- #47-->
-						<li><a href="">Canada Workers Benefit</a></li> <!-- from Chelsey Airtable -->
 						<li><a href="">Public pensions (<abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Old Age Security Pension">OAS</abbr>, <abbr title="Guaranteed Income Supplement">GIS</abbr>)</a></li>
 					</ul>
 					</details>
