--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -309,7 +309,7 @@
 						<li><a href="">Apply for an  Electronic Travel Authorization (eTA)</a></li>  <!-- #9-->
 						<li><a href="">Apply for a study permit</a></li>  <!-- #15-->
 						<li><a href="">Check processing times</a></li> <!-- #17 -->
-						<li><a href="">IRCC accounts - sign in and register</a></li> #18 part of accounts / global sign in
+						<li><a href="">IRCC accounts - sign in and register</a></li> <!-- #18 part of accounts / global sign in -->
 						<li><a href="">Contact Immigration, Refugees and Citizenship Canada</a></li> <!-- #23-->
 						<li><a href="">Immigrate as a provincial nominee</a></li> <!-- #30 -->
 						<li><a href="">Sponsor your family members to immigrate to Canada</a></li> <!-- #31-->
