--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -363,7 +363,7 @@
 					</ul>
 					</details>
 					
-						<details><summary><h2 class="h5 mb-4">Benefits, dental care and support</h2></summary>
+						<details><summary><h2 class="h5 mb-4">Benefits, dental care and financial support</h2></summary>
 					<ul id="6" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 						<li><a href="">Benefits for people with disabilities</a></li> <!-- #24-->
 						<li><a href="">Canadian Dental Care Plan</a></li> <!-- #26-->
