--- a/jmtesting/all-services/top-task-expand-collapse-xl.html
+++ b/jmtesting/all-services/top-task-expand-collapse-xl.html
@@ -295,7 +295,7 @@
 	<li><a href="#3">Personal taxes</a></li>
 	<li><a href="#4">Business taxes</a></li>
 	<li><a href="#5">Employment insurance and leave</a></li>
-	<li><a href="#6">Benefits, dental care and support</a></li>
+	<li><a href="#6">Benefits, dental care and other financial support</a></li>
 	<li><a href="#7">Public pensions (CPP, OAS, GIC)</a></li>
 	<li><a href="#">[Placeholder]</a></li>
 	<li><a href="#">[Placeholder]</a></li>
@@ -386,7 +386,7 @@
 
 					</ul>
 					</details>
-						<details><summary><h2 class="h5 mb-4">Benefits, dental care and support</h2></summary>
+						<details><summary><h2 class="h5 mb-4">Benefits, dental care and other financial support</h2></summary>
 					<ul id="6" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 						<li><a href="">Benefits for people with disabilities</a></li> <!-- #24-->
 						<li><a href="">Canadian Dental Care Plan</a></li> <!-- #26-->
