--- a/jmtesting/all-services/top-task-expand-collapse-xl.html
+++ b/jmtesting/all-services/top-task-expand-collapse-xl.html
@@ -324,8 +324,8 @@
 
 			<section class="mrgn-tp-lg">
 				<div class="container">
-										<details><summary><h2 id="1" class="h5 mb-4">Come to Canada</h2></summary>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
+					<details><summary><h2 id="1" class="h5 mb-4">Come to Canada</h2></summary>
+					<ul id="1" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md">
 						<li><a href="">Apply for a work permit</a></li><!-- #1-->
 						<li><a href="">Check your application status</a></li>  <!-- #2 -->
 						<li><a href="">Apply for a visitor visa</a></li>  <!-- #5-->
