--- a/jmtesting/all-services/top-task-expand-collapse-xl.html
+++ b/jmtesting/all-services/top-task-expand-collapse-xl.html
@@ -325,7 +325,7 @@
 			<section class="mrgn-tp-lg">
 				<div class="container">
 					<details><summary><h2 id="1" class="h5 mb-4">Come to Canada</h2></summary>
-					<ul id="1" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul id="1" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">Apply for a work permit</a></li><!-- #1-->
 						<li><a href="">Check your application status</a></li>  <!-- #2 -->
 						<li><a href="">Apply for a visitor visa</a></li>  <!-- #5-->
@@ -341,7 +341,7 @@
 					</ul>
 					</details>   
 					<details><summary><h2 class="h5 mb-4">Passports and Citizenship</h2></summary>
-					<ul id="2" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul id="2" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 							<li><a href="">Renew a Canadian passport</a></li>  <!-- #11-->
 							<li><a href="">Apply for Canadian citizenship</a></li>  <!-- #13-->
 							<li><a href="">Check the status of a passport application</a></li> <!-- #36-->
@@ -349,7 +349,7 @@
 						</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">Personal taxes</h2></summary>
-					<ul id="3" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul id="3" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">Access your CRA account</a></li><!-- #3-->
 						<li><a href="">Check your mail from CRA</a></li>  <!-- #4-->
 						<li><a href="">File your tax return</a></li>  <!-- #6 seasonal?-->
@@ -367,7 +367,7 @@
 					</details>
 					
 					<details><summary><h2 class="h5 mb-4">Business taxes</h2></summary>
-					<ul id="4" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul id="4" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">GST/HST - File a return</a></li> <!-- #22 repeated -->
 						<li><a href="">Make a payment to the Canada Revenue Agency</a></li> <!-- #29 repeated -->
 						<li><a href="">Calculate payroll deductions</a></li> <!-- #38-->
@@ -377,7 +377,7 @@
 					</details>
 					
 					<details><summary><h2 class="h5 mb-4">Employment Insurance and leave</h2></summary>
-					<ul id="5" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul id="5" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">Submit an Employment Insurance Report</a></li>  <!-- #10 -->
 						<li><a href="">Apply for Employment Insurance</a></li>  <!-- #16 -->
 						<li><a href="">Check your Employment Insurance (EI) claim status and correspondence</a></li> <!-- #19 My Service Canada Account (MSC) -->
@@ -387,7 +387,7 @@
 					</ul>
 					</details>
 						<details><summary><h2 class="h5 mb-4">Benefits, dental care and other financial support</h2></summary>
-					<ul id="6" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul id="6" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">Benefits for people with disabilities</a></li> <!-- #24-->
 						<li><a href="">Canadian Dental Care Plan</a></li> <!-- #26-->
 						<li><a href="">Canada Child Benefit (CCB)</a></li> <!-- #33-->
@@ -395,7 +395,7 @@
 					</ul>
 					</details>
 						<details><summary><h2 class="h5 mb-4">Public pensions (CPP, OAS, GIC)</h2></summary>
-					<ul id="7" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul id="7" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">Canadian Dental Care Plan</a></li> <!-- #26-->
 						<li><a href="">Old Age Security (OAS) - View payment amounts</a></li> <!-- #37-->
 						<li><a href="">Pension payment dates</a></li> <!-- #39-->
@@ -404,7 +404,7 @@
 					</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">[Placeholder]</h2></summary>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
@@ -412,7 +412,7 @@
 						</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">[Placeholder]</h2></summary>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
@@ -420,7 +420,7 @@
 						</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">[Placeholder]</h2></summary>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
@@ -428,7 +428,7 @@
 						</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">[Placeholder]</h2></summary>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
@@ -436,7 +436,7 @@
 						</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">[Placeholder]</h2></summary>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
@@ -444,7 +444,7 @@
 						</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">[Placeholder]</h2></summary>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
 							<li><a href="">Placeholder text link</a></li>
@@ -452,7 +452,7 @@
 						</ul>
 					</details>
 					<details><summary><h2 class="h5 mb-4">Information and advisories</h2></summary>
-					<ul id="8" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul id="8" class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">Weather (current conditions, forecasts, radar, alerts, historical)</a></li> <!-- #32-->
 						<li><a href="">Find a government policy, directive, standard or guideline</a></li> <!-- #43-->
 						<li><a href="">Travel advice and advisories</a></li> <!-- #48-->
@@ -460,7 +460,7 @@
 					</details>
 					<details><summary><h2 class="h5 mb-4">Local government (birth certificates, marriage licenses, driver's licenses, etc.)</h2></summary>
 						<p id="9">Many services are the responsibility of your local government. Please visit your local website. <mark>we can provide additional examples in bullets if needed</mark></p>
-					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-md mrgn-bttm-0">
+					<ul class="colcount-md-2 compact bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">Alberta</a></li>
 						<li><a href="">British Columbia</a></li> 
 						<li><a href="">Manitoba</a></li>
