--- a/jmtesting/all-services/top-task-expand-collapse-xl.html
+++ b/jmtesting/all-services/top-task-expand-collapse-xl.html
@@ -324,7 +324,7 @@
 
 			<section class="mrgn-tp-lg">
 				<div class="container">
-					<details><summary><h2 id="1" class="h5 mb-4">Come to Canada</h2></summary>
+					<details><summary><h2 class="h5 mb-4">Come to Canada</h2></summary>
 					<ul id="1" class="colcount-md-2 bold-content lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-0">
 						<li><a href="">Apply for a work permit</a></li><!-- #1-->
 						<li><a href="">Check your application status</a></li>  <!-- #2 -->
