--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -293,7 +293,7 @@
 </div>
 </div>
 			<div class="container">
-				<h2>By category</h2>
+				<h2>Services by category</h2>
 			</div>
 
 			<section class="mrgn-tp-sm">
