--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -293,7 +293,7 @@
 </div>
 </div>
 			<div class="container">
-				<h2>Services by category</h2>
+				<h2>By category</h2>
 			</div>
 
 			<section class="mrgn-tp-sm">
@@ -409,7 +409,7 @@
 		</section>
 
     <div class="container">
-	<h1 id="all-topics" class="mrgn-tp-xl">Services by topic</h1>
+	<h1 id="all-topics" class="mrgn-tp-xl">By theme</h1>
 </div>
 
 <div class="container">
