--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -409,12 +409,11 @@
 		</section>
 
     <div class="container">
-	<h1 id="all-topics" class="mrgn-tp-xl">By theme</h1>
+	<h2 class="mrgn-tp-xl">By theme</h2>
 </div>
 
 <div class="container">
 	<div class="gc-srvinfo">
-		<h2 class="wb-inv">Services and information</h2>
 		<div class="wb-eqht row">
 			<div class="col-md-6 col-lg-4">
 				<h3 class="h5"><a href="/en/services/jobs.html">Jobs</a></h3>
