--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -314,7 +314,7 @@
 					<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/corporate/contact-ircc.html">Contact Immigration, Refugees and Citizenship Canada</a></li> <!-- #23-->
 				</ul>
 				</details>    
-				<details><summary><h3 class="h5 mb-4">Passports and Citizenship</h3></summary>
+				<details><summary><h3 class="h5 mb-4">Passports and citizenship</h3></summary>
 				<ul id="2" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/renew-adult-passport.html">Renew a Canadian passport</a></li>  <!-- #11-->
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/check-passport-travel-document-application.html">Check the status of a passport application</a></li> <!-- #36-->
@@ -380,7 +380,7 @@
 					<li><a href="https://www.canada.ca/en/services/retirement.html">Learn and plan for your retirement</a></li>
 				</ul>
 				</details>		
-				<details><summary><h3 class="h5 mb-4">Advisories and information</h3></summary>
+				<details><summary><h3 class="h5 mb-4">Advisories</h3></summary>
 				<ul id="8" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://weather.gc.ca/">Weather (current conditions, forecasts, radar, alerts, historical)</a></li> <!-- #32-->
 					<li><a href="https://travel.gc.ca/travelling/advisories">Travel advice and advisories</a></li> <!-- #48-->
