--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -349,12 +349,12 @@
 				</ul>
 				</details>
 				
-				<details><summary><h3 class="h5 mb-4">Employment Insurance and leave</h3></summary>
+				<details><summary><h3 class="h5 mb-4">Employment Insurance</h3></summary>
 				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/employment-insurance-reporting.html">Submit an Employment Insurance Report</a></li>  <!-- #10 -->
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html">Apply for Employment Insurance</a></li>  <!-- #16 -->
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/after-applying.html">Check your Employment Insurance (EI) claim</a></li> <!-- #19 My Service Canada Account (MSC) -->
-					<li><a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/ei-roe.html">Record of employment (<abbr>ROE</abbr>)</a></li>   
+					<li><a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/ei-roe.html">Record of employment (<abbr>ROE</abbr>)</a></li>
 
 				</ul>
 				</details>
@@ -367,6 +367,7 @@
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-child-benefit-overview.html">Canada Child Benefit (CCB)</a></li> <!-- #33-->
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-workers-benefit.html">Canada Workers Benefit</a></li> <!-- from Chelsey Airtable -->
 					<li><a href="https://www.canada.ca/en/government/grants-funding.html">Find grants and funding</a></li>
+					<li><a href="https://www.canada.ca/en/services/benefits/disability.html">Disability benefits</a></li>
 					<li><a href="https://srv138.services.gc.ca/daf/q?id=517e13e4-c46a-4d19-a503-9dfcd80d8dc2&goctemplateculture=en-ca">Benefits finder</a></li>
 				</ul>
 				</details>
