--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -349,7 +349,7 @@
 				</ul>
 				</details>
 				
-				<details><summary><h3 class="h5 mb-4">Employment Insurance and leave</h3></summary>
+				<details><summary><h3 class="h5 mb-4">Employment Insurance</h3></summary>
 				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/employment-insurance-reporting.html">Submit an Employment Insurance Report</a></li>  <!-- #10 -->
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html">Apply for Employment Insurance</a></li>  <!-- #16 -->
