--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -349,11 +349,12 @@
 				</ul>
 				</details>
 				
-				<details><summary><h3 class="h5 mb-4">Employment Insurance</h3></summary>
+				<details><summary><h3 class="h5 mb-4">Employment Insurance and leave</h3></summary>
 				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/employment-insurance-reporting.html">Submit an Employment Insurance Report</a></li>  <!-- #10 -->
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html">Apply for Employment Insurance</a></li>  <!-- #16 -->
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/after-applying.html">Check your Employment Insurance (EI) claim</a></li> <!-- #19 My Service Canada Account (MSC) -->
+					<li><a href="https://www.canada.ca/en/services/benefits/family.html">Family and caregiving</a></li>
 					<li><a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/ei-roe.html">Record of employment (<abbr>ROE</abbr>)</a></li>
 
 				</ul>
