--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -379,7 +379,7 @@
 					<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/old-age-security/payments.html">Old Age Security (OAS) - Estimate payment amounts</a></li> <!-- #37-->
 					<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/amount.html">Canada Pension Plan (CPP) - How much you could recieve</a></li> <!-- #47-->
 					<li><a href="https://www.canada.ca/en/employment-social-development/services/my-account/cpp.html">View payment amounts in My Service Canada Account</a></li>
-					<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/old-age-security/guaranteed-income-supplement.html"></a>Guaranteed Income Supplement</li>
+					<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/old-age-security/guaranteed-income-supplement.html">Guaranteed Income Supplement</a></li>
 					<li><a href="https://www.canada.ca/en/services/retirement.html">Learn and plan for your retirement</a></li>
 				</ul>
 				</details>		
