--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -354,7 +354,7 @@
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/employment-insurance-reporting.html">Submit an Employment Insurance Report</a></li>  <!-- #10 -->
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html">Apply for Employment Insurance</a></li>  <!-- #16 -->
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/after-applying.html">Check your Employment Insurance (EI) claim</a></li> <!-- #19 My Service Canada Account (MSC) -->
-					<li><a href="https://www.canada.ca/en/services/benefits/family.html">Family and caregiving benefits and leave</a></li>
+					<li><a href="https://www.canada.ca/en/services/benefits/family.html">Maternity, parental, and caregiving benefits and leave</a></li>
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-sickness.html">Sickness benefits and leave</a></li>
 					<li><a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/ei-roe.html">Record of employment (<abbr>ROE</abbr>)</a></li>
 
