--- a/jmtesting/layered-theme-refinement/ly-features-3-outside.html
+++ b/jmtesting/layered-theme-refinement/ly-features-3-outside.html
@@ -106,7 +106,7 @@
 	<h2 class="wb-inv">Sign in</h2>
 	
 	<a class="btn btn-primary" href="sign-in-en.html"><span class="visible-xs">Sign in</span>
-			<span class="hidden-xs">Sign in to Jobs</span>
+			<span class="hidden-xs">Sign in</span>
 	</a></section>
 
 				</div></div>
