--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -292,6 +292,8 @@
   All</button>
 </div>
 </div>
+<div id="expand-collapse">
+
 			<div class="container">
 				<h2>By category</h2>
 			</div>
@@ -410,7 +412,7 @@
 				</details>
 			</div>
 		</section>
-
+	</div>
     <div class="container">
 	<h2 class="mrgn-tp-xl">By theme</h2>
 </div>
