--- a/jmtesting/design-canada/closed-programs-fr.html
+++ b/jmtesting/design-canada/closed-programs-fr.html
@@ -141,7 +141,7 @@
             <div class="pattern-demo mrgn-tp-md mrgn-bttm-md">
                 <figure class="mrgn-tp-md mrgn-bttm-lg">
                     <figcaption><b>Étiquette d'avertissement sous le titre d'une page</b></figcaption>
-                    <img src="./images/image7.png" class="img-responsive" alt="Étiquette d'avertissement sous le titre d'une page. Version texte ci-dessous&nbsp;:" />
+                    <img src="./images/image7-fr.png" class="img-responsive" alt="Étiquette d'avertissement sous le titre d'une page. Version texte ci-dessous&nbsp;:" />
                     <details>
                         <summary class="wb-toggle" data-toggle="{&quot;print&quot;:&quot;on&quot;}">Description de l'image&nbsp;: Une étiquette d'avertissement sous le titre d'une page</summary>
                         <p>Cette étiquette d'avertissement a été ajoutée directement sous le titre de la page d'un programme. L'étiquette indique&nbsp;:</p>
@@ -160,7 +160,7 @@
             <div class="pattern-demo mrgn-tp-md mrgn-bttm-md">
                 <figure class="mrgn-tp-md mrgn-bttm-lg">
                     <figcaption><b>Étiquette d'avertissement dans un menu d'accueil thématique</b></figcaption>
-                    <img src="./images/image5.png" class="img-responsive" alt="Étiquette d'avertissement dans un menu d'accueil thématique. Version texte ci-dessous&nbsp;:" />
+                    <img src="./images/image5-fr.png" class="img-responsive" alt="Étiquette d'avertissement dans un menu d'accueil thématique. Version texte ci-dessous&nbsp;:" />
                     <details>
                         <summary class="wb-toggle" data-toggle="{&quot;print&quot;:&quot;on&quot;}">Description de l'image&nbsp;: Étiquette d'avertissement dans un menu d'accueil thématique</summary>
                         <p>Trois menus d'accueil thématiques sont présentés sur trois colonnes dans la section «&nbsp;services et informations&nbsp;» d'une page. Une étiquette d'avertissement indiquant «&nbsp;Bientôt fermé&nbsp;» apparaît sous le titre de l'un des menus d'accueil thématiques sur les prestations.</p>
@@ -174,7 +174,7 @@
             <div class="pattern-demo mrgn-tp-md mrgn-bttm-md">
                 <figure class="mrgn-tp-md mrgn-bttm-lg">
                     <figcaption><b>Alerte d'avertissement en haut de la page</b></figcaption>
-                    <img src="./images/image2.png" class="img-responsive" alt="Alerte d'avertissement en haut de la page. Version texte ci-dessous&nbsp;:" />
+                    <img src="./images/image2-fr.png" class="img-responsive" alt="Alerte d'avertissement en haut de la page. Version texte ci-dessous&nbsp;:" />
                     <details>
                         <summary class="wb-toggle" data-toggle="{&quot;print&quot;:&quot;on&quot;}">Description de l'image&nbsp;: Alerte d'avertissement en haut de la page</summary>
                         <p>Cet avertissement a été placé en haut de la page, sous le titre H1 et l'étiquette d'avertissement, et indique clairement la date limite de présentation des demandes. On peut y lire&nbsp;:</p>
@@ -222,7 +222,7 @@
             <div class="pattern-demo mrgn-tp-md mrgn-bttm-md">
                 <figure class="mrgn-tp-md mrgn-bttm-lg">
                     <figcaption><b>Étiquette de danger sous le titre d'une page</b></figcaption>
-                    <img src="./images/image4.png" class="img-responsive" alt="Étiquette de danger sous le titre d'une page. Version texte ci-dessous&nbsp;:" />
+                    <img src="./images/image4-fr.png" class="img-responsive" alt="Étiquette de danger sous le titre d'une page. Version texte ci-dessous&nbsp;:" />
                     <details>
                         <summary class="wb-toggle" data-toggle="{&quot;print&quot;:&quot;on&quot;}">Description de l'image&nbsp;: Une étiquette de danger sous le titre d'une page</summary>
                         <p>Pour indiquer qu'un programme est fermé, cette étiquette de danger a été ajoutée directement sous le titre de la page (ou H1). On peut y lire&nbsp;:</p>
@@ -242,7 +242,7 @@
             <div class="pattern-demo mrgn-tp-md mrgn-bttm-md">
                 <figure class="mrgn-tp-md mrgn-bttm-lg">
                     <figcaption><b>Alerte d'information en haut de la page</b></figcaption>
-                    <img src="./images/image6.png" class="img-responsive" alt="Alerte d'information en haut de la page. Version texte ci-dessous&nbsp;:" />
+                    <img src="./images/image6-fr.png" class="img-responsive" alt="Alerte d'information en haut de la page. Version texte ci-dessous&nbsp;:" />
                     <details>
                         <summary class="wb-toggle" data-toggle="{&quot;print&quot;:&quot;on&quot;}">Description de l'image&nbsp;: Alerte d'information en haut de la page</summary>
                         <p>Cette alerte d'information a été placée en haut de la page, après le titre H1 et l'étiquette de danger, et indique clairement la date limite de présentation des demandes pour le programme. On peut y lire&nbsp;:</p>
@@ -278,7 +278,7 @@
             <div class="pattern-demo mrgn-tp-md mrgn-bttm-md">
                 <figure class="mrgn-tp-md mrgn-bttm-lg">
                     <figcaption><b>Lien vers l'information à jour</b></figcaption>
-                    <img src="./images/image8.png" class="img-responsive" alt="Lien vers l'information à jour. Version texte ci-dessous&nbsp;:" />
+                    <img src="./images/image8-fr.png" class="img-responsive" alt="Lien vers l'information à jour. Version texte ci-dessous&nbsp;:" />
                     <details>
                         <summary class="wb-toggle" data-toggle="{&quot;print&quot;:&quot;on&quot;}">Description de l'image&nbsp;: Lien vers l'information à jour</summary>
                         <p>Le texte accompagné d'un lien a été ajouté en haut de la page, sous le titre H1 et l'étiquette de danger&nbsp;:</p>
@@ -293,7 +293,7 @@
             <div class="pattern-demo mrgn-tp-md mrgn-bttm-md">
                 <figure class="mrgn-tp-md mrgn-bttm-lg">
                     <figcaption><b>Étiquettes d'avertissement dans de multiples menus d'accueil thématiques</b></figcaption>
-                    <img src="./images/image10.png" class="img-responsive" alt="Étiquettes d'avertissement dans de multiples menus d'accueil thématiques. Version texte ci-dessous&nbsp;:" />
+                    <img src="./images/image10-fr.png" class="img-responsive" alt="Étiquettes d'avertissement dans de multiples menus d'accueil thématiques. Version texte ci-dessous&nbsp;:" />
                     <details>
                         <summary class="wb-toggle" data-toggle="{&quot;print&quot;:&quot;on&quot;}">Description de l'image&nbsp;: Étiquettes d'avertissement dans de multiples menus d'accueil thématiques</summary>
                         <p>Trois menus d'accueil thématiques sont présentés sur trois colonnes dans la section «&nbsp;services et informations&nbsp;» d'une page. Des étiquettes d'avertissement portant la mention «&nbsp;Fermé&nbsp;» ont été ajoutées à côté de l'en-tête de chacune.</p>
