--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -11,7 +11,7 @@ layout: default
 pageclass: cnt-wdth-lmtd
 ---
 <main property="mainContentOfPage" resource="#wb-main" class="container">
-            <h1 id="wb-cont">Page not found / Page non trouvée</h1>
+            <h1 id="wb-cont">Page not found</h1>
             <div class="row mrgn-tp-lg mrgn-bttm-lg">
                 <div class="col-md-12">
                     <div class="row">
@@ -22,6 +22,7 @@ pageclass: cnt-wdth-lmtd
   <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
+<p><a href="www.canada.ca">Go to the French version</a></p>
 <p>The page you’re looking for may have been moved or deleted. Check that the web address (URL) is spelled correctly. Do not include special characters or spaces in the URL.</p> 
 <p>You may be looking for:</p>
 <ul>
@@ -74,6 +75,7 @@ pageclass: cnt-wdth-lmtd
 <p><span class="label label-danger">Erreur 404</span></p>
  </div> 
 </div> 
+<h1 id="wb-cont">Page non trouvée</h1>
 <p>La page que vous recherchez peut avoir été déplacée ou supprimée. Vérifiez que l'adresse (URL) est correcte. N'utilisez pas de caractères spéciaux.</p>                                         
 <p>Vous pouvez rechercher</p>
 <ul>
