--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -1,6 +1,7 @@
 ---
 altLangPage: "#"
 css:
+- https://design.canada.ca/css/split-h1.css
 - https://design.canada.ca/css/custom.css
 - https://use.fontawesome.com/releases/v5.15.4/css/all.css
 date: 2023-02-24
@@ -9,9 +10,9 @@ description: "Standard page with breadcrumbs"
 lang: en
 layout: default
 pageclass: cnt-wdth-lmtd
+title: Page not found
 ---
 <main property="mainContentOfPage" resource="#wb-main" class="container">
-            <h1 id="wb-cont">Page not found</h1>
             <div class="row mrgn-tp-lg mrgn-bttm-lg">
                 <div class="col-md-12">
                     <div class="row">
