--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -20,10 +20,10 @@ title: Page not found
                             <div class="col-md-6">
                                 <div class="mwstext section"><div class="row"> 
  <div class="col-xs-9 col-sm-10 col-md-10"> 
+<p><a href="www.canada.ca">Go to the French version</a></p>
   <p><span class="label label-danger">404 error</span></p>
  </div> 
 </div> 
-<p><a href="www.canada.ca">Go to the French version</a></p>
 <p>The page you’re looking for may have been moved or deleted. Check that the web address (URL) is spelled correctly. Do not include special characters or spaces in the URL.</p> 
 <p>You may be looking for:</p>
 <ul>
@@ -69,12 +69,15 @@ title: Page not found
                             </div>
                         </section>
                         <section lang="fr">
+            <main property="mainContentOfPage" resource="#wb-main" class="container">
+            <div class="row mrgn-tp-lg mrgn-bttm-lg">
+                <div class="col-md-12">
+                    <div class="row">
+                        <section>
                             <div class="col-md-6">
-                            	
                                 <div class="mwstext section"><div class="row"> 
  <div class="col-xs-9 col-sm-10 col-md-10"> 
-<h1 id="wb-cont">Page non trouvée</h1>
-<p><span class="label label-danger">Erreur 404</span></p>
+  <p><span class="label label-danger">Erreur 404</span></p>
  </div> 
 </div> 
 <p>La page que vous cherchez a peut-être été déplacée ou supprimée. Vérifiez que l'adresse web (URL) est correctement écrite. Ne pas inclure de caractères spéciaux ou d’espaces dans l’URL.</p>                                         
