--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -69,15 +69,12 @@ title: Page not found
                             </div>
                         </section>
                         <section lang="fr">
-            <main property="mainContentOfPage" resource="#wb-main" class="container">
-            <div class="row mrgn-tp-lg mrgn-bttm-lg">
-                <div class="col-md-12">
-                    <div class="row">
-                        <section>
                             <div class="col-md-6">
+                            	
                                 <div class="mwstext section"><div class="row"> 
  <div class="col-xs-9 col-sm-10 col-md-10"> 
-  <p><span class="label label-danger">Erreur 404</span></p>
+<h1 id="wb-cont">Page non trouvée</h1>
+<p><span class="label label-danger">Erreur 404</span></p>
  </div> 
 </div> 
 <p>La page que vous cherchez a peut-être été déplacée ou supprimée. Vérifiez que l'adresse web (URL) est correctement écrite. Ne pas inclure de caractères spéciaux ou d’espaces dans l’URL.</p>                                         
