--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -387,7 +387,7 @@
 
 				<details><summary><h3 class="h5 mb-4">Alerts and advisories</h3></summary>
 				<ul id="8" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
-					<li><a href="https://weather.gc.ca/">Weather (current conditions, forecasts, radar, alerts, historical)</a></li> <!-- #32-->
+					<li><a href="https://weather.gc.ca/mainmenu/alert_menu_e.html">Weather alerts</a></li> <!-- #32-->
 					<li><a href="https://travel.gc.ca/travelling/advisories">Travel advice and advisories</a></li> <!-- #48-->
 					<li><a href="https://recalls-rappels.canada.ca/en">Recalls and safety alerts</a></li>
 				</ul>
