--- a/jmtesting/canadaca/typography/home-typography.html
+++ b/jmtesting/canadaca/typography/home-typography.html
@@ -124,6 +124,11 @@
 				font-size: 18px;
 	} */
 
+	/* giant gap after features */
+
+	.home #wb-dtmd {
+		margin-top: 0 !important;
+	}
 
 	/* alignment for navigation pages */
 
