--- a/jmtesting/canadaca/typography/home-typography.html
+++ b/jmtesting/canadaca/typography/home-typography.html
@@ -119,10 +119,10 @@
 		font-size: 18px;
 	}
 
-	/* keep smaller actually, looking too heavy 
+	/* keep slightly smaller due to text length */
 	.home .home-most-requested li {
-				font-size: 18px;
-	} */
+				font-size: 17.5px;
+	}
 
 	/* giant gap after features */
 
