--- a/jmtesting/canadaca/typography/home-typography.html
+++ b/jmtesting/canadaca/typography/home-typography.html
@@ -121,7 +121,7 @@
 
 	/* keep slightly smaller due to text length */
 	.home .home-most-requested li {
-				font-size: 17.5px;
+				font-size: 0.875em !important;
 	}
 
 	/* giant gap after features */
