--- a/jmtesting/canadaca/typography/home-typography-feat-link.html
+++ b/jmtesting/canadaca/typography/home-typography-feat-link.html
@@ -119,7 +119,7 @@
 		font-size: 18px;
 	}
 
-	/* keep slightly smaller due to text length */
+	/* keep slightly smaller due to text length 17.5px */
 	.home .home-most-requested li {
 				font-size: 0.875em !important;
 	}
@@ -416,12 +416,6 @@
  </div> 
 </section>
 <div class="row">
-  <section class="gc-featured-link wb-init gc-featured-link-inited" id="wb-auto-4">
-    <div class="container">
-      <h2 class="wb-inv">Featured</h2>
-      <p><a class="stretched-link" href="#">Canada's response to U.S. tariffs on Canadian goods</a></p>
-    </div>
-  </section>
 </div>
 
 </div>
