--- a/jmtesting/canadaca/typography/home-banner-typography.html
+++ b/jmtesting/canadaca/typography/home-banner-typography.html
@@ -121,8 +121,12 @@
 
 	/* keep slightly smaller due to text length 17.5px */
 	.home .home-most-requested li {
-				font-size: 0.875em !important;
+				font-size: 17.5px !important;
+				/* font-size: 0.875em !important; em doesn't work for mobile because body changes without custom class*/
+
 	}
+	
+
 
 	/* giant gap after features */
 
